# WhatsNew

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  lefthook.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/whatsnew-core/: Cargo.toml
crates/whatsnew-core/assets/: feed_directory.json
crates/whatsnew-core/migrations/: 0001_init.sql  0002_topic_order.sql  0003_article_favorites.sql
crates/whatsnew-core/src/: error.rs  lib.rs  models.rs  reader.rs  refresh.rs  retention.rs  search.rs
crates/whatsnew-core/src/db/: articles.rs  feeds.rs  mod.rs  settings.rs  topics.rs
crates/whatsnew-core/src/feeds/: discovery.rs  fetch.rs  mod.rs  parse.rs
crates/whatsnew-core/src/matching/: directory.rs  mod.rs
crates/whatsnew-core/tests/: db_tests.rs  feed_parsing.rs  matching_tests.rs  retention.rs
scripts/: build.ps1  build.sh  dev.ps1  dev.sh  setup.ps1  setup.sh  test.ps1  test.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs  notify.rs  scheduler.rs  state.rs  tray.rs
src-tauri/src/commands/: articles.rs  feeds.rs  mod.rs  search.rs  settings.rs  topics.rs
web/: .prettierignore  .prettierrc  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: format.ts  relevance.ts  sort.ts  topicCategory.ts  topicIcon.ts  types.ts
web/src/lib/api/: articles.ts  feeds.ts  search.ts  settings.ts  topics.ts
web/src/lib/components/: ArticleCard.svelte  ArticleHeadline.svelte  ArticleListItem.svelte  BookmarkButton.svelte  EmptyState.svelte  SearchResultItem.svelte  (+4 more)
web/src/routes/: +layout.svelte  +page.svelte
web/static/fonts/: README.md
(+19 files in other folders)
